5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1662_2970.log
== TEST (2019-04-15 14:36:35) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042.00
Qo = 1500.00

i = Qf/Qo**(1/t) - 1
print(round(i,5))
if(i<=0.01):
	print(real)
else:
	print(irreal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(irreal)
NameError: name 'irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:58) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042.00
Qo = 1500.00

i = Qf/Qo**(1/t) - 1
print(round(i,5))
if(i<=0.01):
	print(Real)
else:
	print(Irreal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(Irreal)
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:37) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042.00
Qo = 1500.00

i = Qf/Qo**(1/t) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
98935.2577
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:58) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042.00
Qo = 1500.00

i = (Qf/Qo)**(1/t) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.0064
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:38:08) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042.00
Qo = 1500.00

i = (Qf/Qo)**(1/t) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- EXECUTION TIME:
0.149395
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.0064
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00746
Real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01765
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:43) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042.00
Qo = 1500.00

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.0064
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:08) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.0064
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:20) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100.042
Qo = 1.500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.0064
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:30) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100.042.00
Qo = 1.500.00

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- ERROR:
File "XXXX", line 5
    Qf = 100.042.00
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:25) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1.500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.02059
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:39) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:12) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042.00
Qo = 1500.00

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:41:29) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- EXECUTION TIME:
0.219998
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00993
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01158
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02746
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:30) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042000
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.02059
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:39) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 100004200
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.01702
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:47) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 10000420
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.01347
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:01) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500000

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
-0.00062
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:15) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:26) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,2))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.01
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:43:31) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,2))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- EXECUTION TIME:
0.162835
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.01
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.03
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:39) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,3))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.01
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:48) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,4))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.0099
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:58) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:13) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:24) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:28) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- EXECUTION TIME:
0.175704
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00993
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01158
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02746
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:32) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:37) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:44) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:47) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:45) 
-- CODE:
from math import*

t = int(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else
	print("Irreal")
-- ERROR:
File "XXXX", line 15
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:48:48) 
-- CODE:
from math import*

t = float(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:50) 
-- CODE:
from math import*

t = float(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf/Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:58) 
-- CODE:
from math import*

t = float(input("meses: "))

Qf = 1000042
Qo = 1500

i = ((Qf//Qo)**(1/t)) - 1

print(round(i,5))

if(i<=0.01):
	print("Real")

else:
	print("Irreal")
-- OUTPUT:
0.00993
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
